--- a/src/www/package.json
+++ b/src/www/package.json
@@ -9,6 +9,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "inversify": "^4.13.0",
+    "reflect-metadata": "^0.1.12",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
@@ -22,6 +24,7 @@
     "@vue/cli-plugin-typescript": "^3.0.3",
     "@vue/cli-plugin-unit-mocha": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
+    "@vue/devtools": "^4.1.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
     "typescript": "^3.0.0",
