--- a/src/www/package.json
+++ b/src/www/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^17.2.0",
     "inversify": "^4.13.0",
     "reflect-metadata": "^0.1.12",
     "register-service-worker": "^1.0.0",
