--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: "3.1"
 services:
   redis:
     image: redis
+    ports:
+      - "6379:6379"
   wwj:
     image: wwj:latest
     depends_on:
       - redis
-    links:
-      - redis
     ports:
-      - "3000:3000"
+      - "8081:3000"
