--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
     image: redis
     ports:
       - "6379:6379"
-  wwj:
-    image: wwj:latest
+    network_mode:  host
+  app:
+    build:
+      context: .
     depends_on:
       - redis
     ports:
-      - "8081:3000"
+      - "3000:3000"
+    network_mode: host
