--- a/www/package.json
+++ b/www/package.json
@@ -15,7 +15,9 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0"
+    "vue-property-decorator": "^7.0.0",
+    "vuex": "^3.0.1",
+    "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
