--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tweenjs/tween.js": "^17.2.0",
+    "google-protobuf": "^3.6.1",
     "inversify": "^4.13.0",
     "reflect-metadata": "^0.1.12",
     "register-service-worker": "^1.0.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
+    "@types/google-protobuf": "^3.2.7",
     "@types/mocha": "^5.2.4",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-pwa": "^3.0.3",
