--- a/www/package.json
+++ b/www/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --modern",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "codegen": "node codegen.js"
@@ -18,6 +18,7 @@
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
     "vuex-typescript": "^3.0.2"
   },
