--- a/www/package.json
+++ b/www/package.json
@@ -10,9 +10,8 @@
     "codegen": "node codegen.js"
   },
   "dependencies": {
-    "@tweenjs/tween.js": "^17.2.0",
-    "google-protobuf": "^3.6.1",
     "inversify": "^4.13.0",
+    "protobufjs": "^6.8.8",
     "reflect-metadata": "^0.1.12",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
@@ -34,7 +33,6 @@
     "@vue/devtools": "^4.1.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
-    "ts-protoc-gen": "^0.8.0",
     "typescript": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   }
