--- a/www/package.json
+++ b/www/package.json
@@ -18,6 +18,7 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.2",
+    "vue-scrollactive": "^0.8.0",
     "vuex": "^3.0.1",
     "vuex-typescript": "^3.0.2"
   },
